2007-08-14  Hans Boehm <Hans.Boehm@hp.com> (partly really Henrik Theiling)

	* include/gc.h (GC_PTR_STORE): Fix non-DEBUG parentheses.
	* tests/test.c (run_one_test): Add GC_PTR_STORE test.
	No longer test for RS6000.

2007-08-03  Hans Boehm <Hans.Boehm@hp.com>
	
	* alloc.c, backgraph.c, headers.c, include/private/gc_priv.h:
	Maintain GC_our_memory and GC_n_memory.
	* dbg_mlc.c (GC_print_smashed_obj): Improve message.
	(GC_print_all_smashed_proc): Pass client object address instead of
	base.
	* dyn_load.c (sort_heap_sects): New.  (GC_register_map_entries):
	Register sections that are contiguous and merged with our heap.
	* malloc.c, os_dep.c (GC_text_mapping): Check for just base name
	of libraries.
	* malloc.c (calloc): Check for special callers even with
	USE_PROC_FOR_LIBRARIES. Move assertion.  Add rudimentary
	malloc/free tracing.
	* misc.c: No longer call GC_init_lib_bounds explicitly.
	* thread_local_alloc.c (GC_malloc, GC_malloc_atomic): Always
	initialize on demand.
	* tests/test.c: Call GC_INIT only when required.

2007-08-03  Hans Boehm <Hans.Boehm@hp.com>

	* Makefile.direct: Remove comment fragment.
	* tests/tests.am: Add smashtest.
	* Makefile.in: Regenerate.
	* configure.ac: Define GC_USE_DLOPEN_WRAP with redirect-malloc.
	* configure: Regenerate.
	* pthread_support.c: Fix comment spelling.
	* include/private/gcconfig.h: Define USE_PROC_FOR_LIBRARIES with
	GC_LINUX_THREADS and REDIRECT_MALLOC.
	* tests/smash_test.c: Initial check-in.
	* obj_map.c: Print log entry to correct file.
	* include/private/thread_local_alloc.h: Add TlsAlloc error check.

2007-07-23  Hans Boehm <Hans.Boehm@hp.com>

	* alloc.c (GC_stopped_mark): Call GC_add_current_malloc_heap()
	while world is still running.
	* os_dep.c (GC_is_heap_base): Don't call GC_add_current_malloc_heap()
	with world stopped.
	* include/gc.h (GC_INIT for cygwin): Always call GC_add_roots.
	* misc.c (GC_init/GC_init_inner): Perform all work in
	GC_init_inner.