@@ -174,7 +174,8 @@ void GC_with_callee_saves_pushed(void (*fn)(ptr_t, void *),
 
 #   if defined(HAVE_PUSH_REGS)
       GC_push_regs();
-#   elif defined(UNIX_LIKE) && !defined(DARWIN) && !defined(ARM32)
+#   elif defined(UNIX_LIKE) && !defined(DARWIN) && !defined(ARM32) && \
+	 !defined(HURD)
       /* Older versions of Darwin seem to lack getcontext(). */
       /* ARM Linux often doesn't support a real getcontext(). */
       ucontext_t ctxt;
@@ -219,6 +220,8 @@ void GC_with_callee_saves_pushed(void (*fn)(ptr_t, void *),
   	  /* _setjmp won't, but is less portable.		*/
 #       endif
 #   endif /* !HAVE_PUSH_REGS ... */
+    /* FIXME: context here is sometimes just zero.  At the moment the callees	*/
+    /* don't really need it.							*/
     fn(arg, context);
     /* Strongly discourage the compiler from treating the above	*/
     /* as a tail-call, since that would pop the register 	*/
